[package]
name = "advent-code-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.2"
itertools = "0.10.5"
cached = "0.39.0"
counter = "0.5.6"
csr = "0.8.2"
md-5 = "0.10.5"
pathfinding = "3.0.13"
rayon = "1.5.3"
